[gd_scene load_steps=10 format=2]

[ext_resource path="res://font/NotoSerifCJKjp-Medium.otf" type="DynamicFontData" id=1]
[ext_resource path="res://script/TimerScene.gd" type="Script" id=2]
[ext_resource path="res://PlayerInfo.tscn" type="PackedScene" id=3]
[ext_resource path="res://sound/five.wav" type="AudioStream" id=4]
[ext_resource path="res://font/font.tres" type="DynamicFont" id=5]
[ext_resource path="res://bg.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512.139, 294.441 )
scale = Vector2( 0.918961, 0.992076 )
texture = ExtResource( 6 )

[node name="timer" type="Label" parent="."]
margin_left = 126.0
margin_top = 219.378
margin_right = 266.0
margin_bottom = 404.378
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( -774.226, -176.12 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0.133333, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "15"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer2" type="Label" parent="."]
margin_left = 266.0
margin_top = 256.54
margin_right = 359.0
margin_bottom = 441.54
rect_pivot_offset = Vector2( -775.766, -63.1044 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.847059, 0.0156863, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "30"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 691.447
margin_top = 401.778
margin_right = 393.447
margin_bottom = -127.222
rect_scale = Vector2( 2, 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="eat" type="Label" parent="."]
visible = false
margin_left = 115.0
margin_top = 402.0
margin_right = 371.0
margin_bottom = 495.0
custom_fonts/font = SubResource( 3 )
text = "副露時間制限"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="eattimer" type="Label" parent="."]
visible = false
margin_left = 371.0
margin_top = 402.0
margin_right = 464.0
margin_bottom = 496.0
rect_pivot_offset = Vector2( -775.766, -63.1044 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "8"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="LineEdit" type="LineEdit" parent="."]
pause_mode = 2
margin_top = 563.384
margin_right = 1024.0
margin_bottom = 597.384
custom_fonts/font = ExtResource( 5 )
placeholder_text = "Command goes here. Refer to the document for detail."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 541.778
margin_right = 1024.0
margin_bottom = 565.778
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = ExtResource( 5 )
text = "Command output"
autowrap = true

[node name="dummy" type="LineEdit" parent="."]
margin_left = -109.407
margin_top = 78.5403
margin_right = -51.407
margin_bottom = 102.54
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="focus_entered" from="LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
